feat: added ability to request just unit's abilities (#9)
