# warhammer.go
@@ -29,6 +29,7 @@ type WarhammerRepository interface {
 
 	GetUnitByID(ctx context.Context, id string) (*api.Unit, error)
 	GetUnits(ctx context.Context, params api.GetUnitsParams) ([]api.Unit, error)
+	GetAbilitiesForUnitByID(ctx context.Context, id string) ([]api.Ability, error)
 
 	GetWarscrollByID(ctx context.Context, id string) (*api.Warscroll, error)
 	GetWarscrolls(ctx context.Context, params api.GetWarscrollsParams) ([]api.Warscroll, error)
